AOJ/ALDS/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/AOJ/ALDS/ALDS1_10_B.cpp: In function 'll rec(ll, ll)':
/Users/kakeshitamasamichi/Desktop/kyopro/AOJ/ALDS/ALDS1_10_B.cpp:318:45: error: 'i' was not declared in this scope
  318 |   rep(k,l+1,r)chmin(res,rec(l,k)+rec(k,r)+m[i][0]*m[k-1][1]*m[r-1][1]);
      |                                             ^
